src/test/ui/span/issue-43927-non-ADT-derive.stderr
error: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-43927-non-ADT-derive.rs:3:1
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try an outer attribute: `#[derive(Debug, PartialEq, Eq)]`

error: aborting due to previous error

